--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5634,7 +5634,13 @@ ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design i
 ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
 ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
 ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
-ROM_pave_the_way_for_industrial_expansion:0 "Pave the Way for Industrial Expansion"
+ROM_pave_the_way_for_industrial_expansion:0 "Pave the W ay for Industrial Expansion"
+ROM_tackle_unemployment:0 "Tackle Unemployment"
+ROM_transistion_away_from_wartime_jobs:0 "Transition Away From Wartime Jobs"
+
+
+
+
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
@@ -5715,11 +5721,12 @@ ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from 
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
 
 
-ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W"
+ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W\n£stability_texticon Gain Base Stability:§W§R -0.15.00%§WR§WW"
 ROM_spike_interest.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£construction_speed_texticon Construction Speed:§W§R -5.00%§R§W\n£political_power_cost_texticon Daily Political Power Gain:§W§G +0.10§G§W"
 ROM_price_controls.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£political_power_cost_texticon Daily Political Power Gain:§W§R -0.15§R§W"
 ROM_strengthen_leu.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-5.0%§Y§W\n£factory_output_texticon Factory Output:§W §R-5.00%§R§W \n£stability_texticon Gain Base Stability:§W§G +2.50%§G§W"
-
+ROM_tackle_unemployment.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£construction_speed_texticon Construction Speed§W§G +5.00%§G§W\n£stability_texticon  Gain Base Stability:§W§G +5.00%§G§W"
+ROM_tafwtj.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£construction_speed_texticon Construction Speed§W§G +10.00%§G§W\n£factory_output_texticon Factory Output:§W§R -10.00%§R§W"
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
