--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5225,11 +5225,11 @@ ROM_influx_of_western_intellectuals_idea2:0 "Influx of Western Socialists"
 ROM_towards_a_socialist_economy:0 "Transitioning Economy"
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
-ROM_fixing_the_railways:0 "Fixing the Railways"
+ROM_fixing_the_railways:0 "Improve our Railway System"
 ROM_the_conservative_conservatives:0 "The Conservative in the Conservative Party"
 ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as of late. What started out as a purely conservative party has been morphed into a mess of contradictionary left and right wing positions on various issues, with little coherence. Luckily, the appointment of Delavrancea has given us a chance to make the conservative party conservative again."
 ROM_fixing_the_railways_desc:0 ""
-ROM_develop_the_north:0 "The Forgotten Half of the Country"
+ROM_develop_the_north:0 "Moldovan Industrialisation"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
 ROM_prahova_valley:0 "Expand the Prahova Valley"
 ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the Prahovan Valley for our continued economic development."
@@ -5604,20 +5604,20 @@ ww1_romania.71.t:0 "[FRA.GetName] sends us a Aid Package!"
 ww1_romania.71.desc:0 "Due to our struggles in the war, [FRA.GetName] has decided to send us a bunch of military equipment."
 ww1_romania.71.a:0 "Thanks, I guess."
 ROM_romanian_economy_idea:0 "Romanian Economy"
-ROM_continue_electrification:0 "Continue Electrification"
-ROM_import_foreign_tools:0 "Import Foreign Tools"
+ROM_continue_electrification:0 "Electrification Efforts"
+ROM_import_foreign_tools:0 "Foreign Tools"
 ROM_concessions_to_the_upper_class:0 "Concessions to the Upper Class"
-ROM_support_industrialists:0 "Support Industrialists"
-ROM_agricultural_knowledge:0 "New Agricultural Techniques"
-ROM_government_aid_to_industries:0 "Aid Construction of New Factories"
-ROM_move_away_from_an_export_based_economy:0 "Move Away From an Export-Based Economy"
+ROM_support_industrialists:0 "Use the Industrialists"
+ROM_agricultural_knowledge:0 "New Agricultural Methods"
+ROM_government_aid_to_industries:0 "Government Subsidies"
+ROM_move_away_from_an_export_based_economy:0 "Strengthen Romanian Domestic Industry"
 ROM_doubuja_steel_industry:0 "Dobrujan Steel Industry"
 ROM_expand_doubruja_dockyards:0 "Expand Danube Ports"
 ROM_increase_cereal_exports:0 "Increase Cereal Exports"
-ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains Fruits and Seeds"
-ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
+ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp-Up Agricultural Exports"
+ROM_increase_gold_and_silver_exports:0 "Export Rare Metals"
 ROM_expansion_of_the_lumber_industry:0 "Expand the Logging Industry"
-ROM_trade_deals_with_germany_and_austria:0 "Trade Deals With Germany and Austria"
+ROM_trade_deals_with_germany_and_austria:0 "Trade Deals With The Central Powers"
 ROM_close_the_trade_defict:0 "Close the Trade Deficit"
 ww1_romania.72.t:0 "Successful Aircraft Design Returned"
 ww1_romania.72.desc:0 "Aurel Vlaicu, Romanian inventor, engineer, airplane designer and pilot, flew for the first time A. Vlaicu Nr. I today near Bucharest. This is a huge development for Romanian planes to be used in the military."
@@ -5634,7 +5634,7 @@ ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design i
 ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
 ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
 ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
-ROM_pave_the_way_for_industrial_expansion:0 "Pave the W ay for Industrial Expansion"
+ROM_pave_the_way_for_industrial_expansion:0 "Pave the Way for Mass Industrialisation"
 ROM_tackle_unemployment:0 "Tackle Unemployment"
 ROM_transistion_away_from_wartime_jobs:0 "Transition Away From Wartime Jobs"
 
