--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -2512,13 +2512,13 @@
  MOU_neutrality_ADJ:0 "Северо-Кавказск"
  MOU_communism_ADJ:0 "Горск"
  VLN_fascism:0 "Союз Национальных Государств"
- VLN_fascism_DEF:0 "Нациоанльные Государства"
+ VLN_fascism_DEF:0 "Национальные Государства"
  VLN_democratic:0 "Казачья Республика"
  VLN_democratic_DEF:0 "Казачья Республика"
  VLN_neutrality:0 "Запорожская Сечь"
  VLN_neutrality_DEF:0 "Запорожская Сечь"
- VLN_communism:0 "Вольная Земля"
- VLN_communism_DEF:0 "Вольная Земля"
+ VLN_communism:0 "Вольная Территория"
+ VLN_communism_DEF:0 "Вольная Территория"
  VLN_fascism_ADJ:0 "Казаческ"
  VLN_democratic_ADJ:0 "Казаческ"
  VLN_neutrality_ADJ:0 "Запорожск"
