--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -466,3 +466,11 @@
  minister_of_national_defense:0 "Министр национальной обороны"
  administration_reformer:0 "Реформатор администрации"
  judicial_reformer:0 "Судебный реформатор"
+ black_baron:0 "Черный барон"
+ master_organizer:0 "Главный организатор"
+ staunch_traditionalist:0 "Убежденный традиционалист"
+ divided_coalition_leader:0 "Лидер разделенной коалиции"
+ steadfast_commander:0 "Непоколебимый командир"
+ supreme_ruler:0 "Верховный правитель"
+ ruthless_commander:0 "Беспощадный командир"
+ anti_communist_crusader:0 "Антикоммунистический крестоносец"
