--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7396,6 +7396,7 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_communard_sentiment:0 "Communard Sentiment"
  FRA_ww1_focus_on_reparation:0 "Focus on Reparations"
  FRA_interwar_syrian_mandate:0 "Mandate of Syria"
+ FRA_interwar_syrian_mandate_desc:0 "As previously agreed, Syria and Lebanon will be reorganised as a League of Nations mandate under our protection, until it can be granted independence. In reality the region will become the newest addition to our colonial empire."
  FRA_interwar_spa_conference:0 "Spa Conference"
  FRA_interwar_spa_conference_desc:0 "The Spa conference followed the Treaty of Versailles of 1919 “to discuss the practical application of the chapter of reparations” at the end of the Great War. In other words, Germany will have to start paying off the long debt it owes to our nation."
  FRA_ww1_brigades_blindees:0 "Brigades Blindées"
@@ -7412,7 +7413,7 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_interwar_paris_conference:0 "Paris Conference"
  FRA_interwar_paris_conference_desc:0 "We must continue our discussions with Britain on the [GER.getName]'s payment agenda. Faster payment could support our economy in the short term."
  FRA_interwar_tangier:0 "International Tangier"
- FRA_interwar_tangier_desc:0 "Tangier is the strategic city in Morocco which the French, Spanish, and British wants to have control. It would be better to set up the international zone for the sake of peace."
+ FRA_interwar_tangier_desc:0 "Tangier is a strategic city in Morocco which the French, Spanish, and British want to have control. It would be better to set up the international zone for the sake of peace."
 
  FRA_interwar_fortress_tangier:0 "Fortress Tangier"
  FRA_interwar_fortress_tangier_desc:0 "The town of Tangier is a strategic position similar to that of Gilbaltar or Ceuta. We cannot renounce this providential basis. With the help of special funds, we could make it a real fortified position capable of preparing possible invasion forces."
@@ -7425,12 +7426,13 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_continental_affairs:0 "Continental Affairs"
  FRA_ww1_san_remo_oil_agreement:0 "San Remo Oil Agreement"
  FRA_ww1_support_yugoslavia:0 "Support [SER.GetName]"
- FRA_ww1_support_yugoslavia_desc:0 "The Serbs were given generous amounts of land with the defeat of the Central Powers, yet these gains will never be recognised by Bulgarians and Magyrs. 
+ FRA_ww1_support_yugoslavia_desc:0 "The Serbs were given generous amounts of land with the defeat of the Central Powers, yet these gains will never be recognised by the Bulgarians and Magyrs. We must guarantee their security."
  FRA_ww1_support_romania:0 "Support [ROM.GetName]"
+ FRA_ww1_support_romania_desc:0 
  FRA_ww1_protect_czechoslovakia:0 "Support [CZE.GetName]"
  FRA_ww1_protect_czechoslovakia_desc:0 "The young Czechoslovak state, much like its neighbours, is fragile. They would make for a suitable counterweight to future German revanchism. Its imperative we grant them our protection."
  FRA_ww1_little_entente:0 "Little Entente"
- FRA_ww1_little_entente_desc:0 "Attempts by the Hungarians to either restore the Habsburgs, or any moves to retake lands lost to their neighbours would surely cause a war. A military pact between Prague, Bucharest and Belgrade is the only way to prevent this.
+ FRA_ww1_little_entente_desc:0 "Attempts by the Hungarians to either restore the Habsburgs, or any moves to retake lands lost to their neighbours would surely cause a war. A military pact between Prague, Bucharest and Belgrade is the only way to prevent this."
  FRA_ww1_rhineland_fate:0 "Withdraw from Rhineland?"
  FRA_interwar_ruhr_occupation:0 "Ruhr Occupation"
  FRA_interwar_ruhr_occupation_desc:0 "Without British support and the insidious complicity of the Weimar government, we are forced to take steps to obtain the reparations we are entitled to receive. By occupying the highly industrialized area of the Ruhr, we will gain control of a large part of Germany's production capacities."
@@ -8486,13 +8488,13 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_steel_mills:0 "Steel Mills"
  BRA_steel_mills_desc:0 "We should start producing steel in order to reduce imports."
  BRA_focus_fabrica_de_itajuba:0 "Fabrica de Itajubá"
- BRA_focus_fabrica_de_itajuba_desc:0 "We need to invest in our local arms plants like Itajubá factory."
+ BRA_focus_fabrica_de_itajuba_desc:0 "We need to invest in our local arms plants like the Itajubá factory."
  BRA_construction_effort:0 "Construction Effort"
  BRA_construction_effort_desc:0 ""
  BRA_federal_center_for_technological_education:0 "Escola Normal de Artes e Ofícios"
  BRA_federal_center_for_technological_education_desc:0 ""
  BRA_loan_from_us:0 "Loan from US"
- BRA_loan_from_us_desc:0 "We'll need a loan from United States for our future projects"
+ BRA_loan_from_us_desc:0 "We'll need a loan from United States for our future projects."
  BRA_electrification_of_the_estrada_de_ferro_central_do_brasil:0 "Electrification of the EFCB"
  BRA_electrification_of_the_estrada_de_ferro_central_do_brasil_desc:0 "Estrada de Ferro Central do Brasil is one of the principal railways of Brazil. Electrification would make it even better."
  BRA_madeira_mamore_railroad:0 "Madeira-Mamoré Railroad"
@@ -8500,7 +8502,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_politica_das_salvacoes:0 "Política das Salvações"
  BRA_politica_das_salvacoes_desc:0 ""
  BRA_military_interventions:0 "Military Interventions"
- BRA_military_interventions_desc:0 "Our country is plagued with oligarchy, direct military intervention can solve this."
+ BRA_military_interventions_desc:0 "Our country is plagued with oligarchs and rebels, direct military intervention can solve this."
  BRA_renegotiation_of_the_external_debt:0 "Renegotiation of the External Debt"
  BRA_renegotiation_of_the_external_debt_desc:0 ""
  BRA_republic_of_the_sword:0 "Second Republic of the Sword"
@@ -8597,7 +8599,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_national_cruiser_production_desc:0 ""
  BRA_governo_da_pacificacao_dos_espiritos:0 "Governo da pacificação dos espíritos"
  BRA_governo_da_pacificacao_dos_espiritos_desc:0 ""
- BRA_declare_war_on_the_central_powers_desc:0 "We will no longer tolerate German aggression. It's time show the world that Brazil is a South American great power."
+ BRA_declare_war_on_the_central_powers_desc:0 "We will no longer tolerate German aggression. It's time to show the world that Brazil is a South American great power."
  BRA_national_industrialisation:0 "National Industrialisation"
  BRA_national_industrialisation_desc:0 "Brazil's economy is heavily based on coffee exports, industrialisation is essential in current times."
  BRA_declare_war_on_the_central_powers:0 "War with Central Powers"
@@ -8789,9 +8791,9 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  CAN_greenland:0 "The Greenland Purchase"
  CAN_greenland_desc:0 "We need bases to expand our oceanic, and continental reach. We must send a diplomat to the Kingdom of Denmark to prepare for the wars to come. "
  CAN_Alaska:0 "Demand Alaska"
- CAN_Alaska_desc:0 "All northern territory is rightfully Canadian. This american incursion into the north shall be dealt with."
+ CAN_Alaska_desc:0 "All northern territory is rightfully Canadian. This American incursion into the north shall be dealt with."
  CAN_british_demands:0 "Demand Newfoundland and Labrador"
- CAN_british_demands_desc:0 "The british empire is falling, and they must release the atlantic colonies from their tyrannical hands."
+ CAN_british_demands_desc:0 "The British Empire is falling, and they must release the Atlantic colonies from their tyrannical hands."
  CAN_france_demands:0 "Demand St.Pierre and Miquelon"
  CAN_france_demands_desc:0 "The French have no business in North America. This land belongs to Canada and it's people."
  CAN_1812:0 "An Alternate 1812"
@@ -8802,7 +8804,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  CAN_integration_desc:0 "Yankeedom is basically Canadian already, why not just give it an official status."
  CAN_reintegrate_columbia:0 "Reintegrate Columbia"
  CAN_reintegrate_columbia_desc:0 "The pacific coast of British Columbia was divided. We shall reunite this territory with it's former american territory."
- CAN_american_puppet:0 "An Amercian Protectorate"
+ CAN_american_puppet:0 "An American Protectorate"
  CAN_american_puppet_desc:0 "To bring balance to North America, we must allow the americans to govern themselves with limited power. An American protectorate will be made."
  CAN_mexico:0 "Tame the Southern Jaguar"
  CAN_mexico_desc:0 "For years, Mexico has been in civil turmoil. We shall help our monarchist allies in Mexico put an end to this."
@@ -8819,7 +8821,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  CAN_japanese_ships:0 "Japanese Naval Agreements"
  CAN_japanese_ships_desc:0 "The Japanese are an up and coming naval power. With thier doctrine and Engineers, we can dominate the pacific"
  CAN_german_alliance:0 "A Sacrilegious  Alliance"
- CAN_german_alliance_desc:0 "It seems the Germans have a shared interest of destroying British dominance.Send them a telegram of Canadian friendship."
+ CAN_german_alliance_desc:0 "It seems the Germans have a shared interest of destroying British dominance. Send them a telegram of Canadian friendship."
  CAN_german_ships:0 "German Naval Doctrine"
  CAN_german_ships_desc:0 "The Germans have a sophisticated navy that can rival many other nations. Maybe we should use thier knowledge to our advantage"
  CAN_technology_share:0 "Technology Sharing"
@@ -8886,8 +8888,8 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  CAN_british_factories_desc:0 "To provide for the empires wars, we must make small arms factories. British investors can help with this project."
  CAN_supplies:0 "Supplies for War"
  CAN_supplies_desc:0 "Canada is an essential nation to provide the resources needed for the empire."
- CAN_american_persaude:0 "Persaude the Americans"
- CAN_american_persaude_desc:0 "We must send diplomats to the US to persaude them into the war. Atleast we can make make good relations with them."
+ CAN_american_persaude:0 "Persuade the Americans"
+ CAN_american_persaude_desc:0 "We must send diplomats to the US to persuade them into the war. At least we can make make good relations with them."
  CAN_england_puppet:0 "A Jewel for a Canadian Empire"
  CAN_england_puppet_desc:0 "With rising British-Canadian tensions, we should sieze this moment and become the Overlords of our former masters. What is a forged symbolic lion to the true Northern Bear."
  CAN_russia_diplomacy:0 "Diplomats in Russia"
@@ -9517,7 +9519,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  SWE_shun_socialism:0 "Shun the Socialists"
  SWE_shun_socialism_desc:0 "We have no need for the socialists, liberalism alone will get us by."
  SWE_slash_military_spending:0 "Slash Military Spending"
- SWE_slash_military_spending_desc:0 "Sweden has no interest  in foreign wars. We shall slash military spending to ribbons!"
+ SWE_slash_military_spending_desc:0 "Sweden has no interest in foreign wars. We shall slash military spending to ribbons!"
  SWE_sverige_embarrassment:0 "The Sverige Embarrassment"
  SWE_sverige_embarrassment_desc:0 "Despite the intention of ending military spending, Conservatives across the country began a mass fundraising to produce a battleship- the Sverige. This doesn't look good for this government."
  SWE_put_funds_elsewhere:0 "Put the Funds Elsewhere"
@@ -9853,7 +9855,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  KUW_balkan_war_donations:0 "Balkan War donations"
  KUW_balkan_war_donations_desc:0 "The ungrateful countries of the Balkans are fighting the great Ottoman Empire so we will need to give all our support to the Sultan."
  KUW_ottoman_trade_funds:0 "Ottoman Trade Funds"
- KUW_ottoman_trade_funds_desc:0 "We're having a couple ottoman investments."
+ KUW_ottoman_trade_funds_desc:0 "We're having a couple of Ottoman investments."
  KUW_neutrality_in_the_war:0 "Neutrality in the War"
  KUW_neutrality_in_the_war_desc:0 "War"
  KUW_regin_of_al_kabir:0 "Regin of Al Kabir"
@@ -9879,7 +9881,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  KUW_english_guns:0 "English Guns"
  KUW_english_guns_desc:0 "We have requested a couple of guns from London"
  KUW_invitethegermanfleet:0 "Invite the German Fleet"
- KUW_invitethegermanfleet_desc:0 "Since the Brits won't help we will ask Germany"
+ KUW_invitethegermanfleet_desc:0 "Since the Brits won't help we will ask Germany."
  KUW_french_protection:0 "French Protection"
  KUW_french_protection_desc:0 "We could simply just replace one imperialist power with another like back in 1899"
  KUW_lessons_from_the_vayrag:0 "Lessons from the Vayrag"
@@ -9899,7 +9901,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  KUW_request_hasa:0 "Request Hasa"
  KUW_request_hasa_desc:0 "We are simply asking for our historical right in Hasa"
  KUW_claim_british_arabia:0 "Claim British Arabia"
- KUW_claim_british_arabia_desc:0 "the British protectorates in Arabia should be owned by Arabs like our selves"
+ KUW_claim_british_arabia_desc:0 "the British protectorates in Arabia should be owned by Arabs like ourselves"
  KUW_ottoman_weapons:0 "Ottoman Weapons"
  KUW_ottoman_weapons_desc:0 "We are receiving old ottoman rifles"
  KUW_first_car_in_kuwait:0 "First Car in Kuwait" 
@@ -10087,7 +10089,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  DON_fund_alekseev:0 "Fund Alekseev"
  DON_fund_alekseev_tt:0 "§yAlekseev§! will receive funds for his recruitment campaigns."
  DON_fund_alekseev_desc:0 "General Alekseev's initiative, vital for our cause, requires not just moral but also financial support. Funding his efforts will ensure the smooth establishment and operation of his growing force."
- DON_contact_czech_legion_leaders:0 "Contact Diterichs"
+ DON_contact_czech_legion_leaders:0 "Contact Diterikhs"
  DON_czech_legion_contacted_tt:0 "§YDieterichs§! will be contacted for reinforcements."
  DON_contact_czech_legion_leaders_desc:0 "General Alekseev aims to enlist the aid of M.K. Diterikhs at the Headquarters, not only to secure loyal officers and units but also to bring in Czechoslovak legionnaires. These experienced fighters will significantly strengthen Alekseev's forces, adding a crucial element to our burgeoning resistance against the Bolsheviks."
  DON_open_broader_conscription:0 "Widen conscription"
@@ -10117,9 +10119,9 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  SIB_a_strong_hand:0 "A Firm Hand"
  SIB_a_strong_hand_desc:0 "To bring us to victory in the civil war, we need a strong leader. A former admiral, Aleksandr Kolchak is the perfect choice for someone to guide us and our liberation of Russia!"
  SIB_lobby_for_foreign_aid:0 "Lobby for Foreign Aid"
- SIB_lobby_for_foreign_aid_desc:0 "We can't fight the bolsheviks on our own, we will need some foreign help. Luckily for us the foreign powers arent very supportive of the Soviet government and are supportive of our forces. We will lobby for these foreign powers to aid us in the fight against bolshevism."
+ SIB_lobby_for_foreign_aid_desc:0 "We can't fight the Bolsheviks on our own, we will need some foreign help. Luckily for us the foreign powers arent very supportive of the Soviet government and are supportive of our forces. We will lobby for these foreign powers to aid us in the fight against bolshevism."
  SIB_demand_recognition_from_generals:0 "Demand Recognition from Generals"
- SIB_demand_recognition_from_generals_desc:0 "All across Russia, generals are declaring their own local governments to fight against the bolshevik regime. We must demand recognition off of these generals so they can coordinate with us and we can liberate Russia from the menace of the bolsheviks."
+ SIB_demand_recognition_from_generals_desc:0 "All across Russia, generals are declaring their own local governments to fight against the Bolshevik regime. We must demand recognition off of these generals so they can coordinate with us and we can liberate Russia from the menace of the bolsheviks."
  SIB_form_russian_army:0 "Form Russian Army"
  SIB_form_russian_army_desc:0 "As a former Admiral of the Russian Empire, Kolchak has extensive military connections. This will allow us to act more effectively regarding military matters, which should prove helpful as we train the Russian army of tomorrow."
  SIB_create_omon:0 "Create OMON"
@@ -10135,7 +10137,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  SIB_progressive_coalition:0 "Progressive Coalition"
  SIB_progressive_coalition_desc:0 "The presence of socialists within the Constituent Assembly is not something we should be ashamed of. In fact, it is quite an achievement for the Russian political sphere to be able to create and maintain a politically diverse landscape. However, we must not lose sight of our ultimate goal, which is to bring peace back to the motherland. The formation of a progressive coalition in the assembly will allow us to face very little opposition regarding our future decisions."
  SIB_depolitization_of_the_army:0 "Depolitization of the Army"
- SIB_depolitization_of_the_army_desc:0 "Our army is currently a hotmess of socialists, republicans, consitutionalists monarchist, reactonnaries, liberals, ... if we are to remain a united bloc and not disintegrate into infighting, these political beliefs must be carried out of the army, one way or another."
+ SIB_depolitization_of_the_army_desc:0 "Our army is currently a hotmess of socialists, republicans, consitutionalists monarchist, reactionaries, liberals, ... if we are to remain a united bloc and not disintegrate into infighting, these political beliefs must be carried out of the army, one way or another."
  SIB_mobilize_the_economy:0 "Mobilize the Economy"
  SIB_mobilize_the_economy_desc:0 "Surprisingly, a civil war is not good for the economy. As inflation continues to skyrocket, the constituent assembly has set up an Emergency Economic Council to deal with the economy. The first order of business being the current fiscal crisis."
  SIB_contact_the_white_forces:0 "Contact the White Forces"
