--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1642,12 +1642,12 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_franz_ferdinand_i:0 "I. Ferenc Ferdinánd"
  HUN_karl_i:0 "IV. Károly"
  HUN_franz_joseph_ii:0 "II. Ferenc József"
- HUN_tersztyanszky_von_nadas:0 "Tersztyánszky von Nádás"
- HUN_kolossvary_de_kolosvar:0 "Kolossváry de Kolosvár"
- HUN_tamasy_von_fogaras:0 "Tamásy von Fogaras"
+ HUN_dezso_kolossvary:0 "Dezső Kolossváry"
+ HUN_arpad_tamasy:0 "Árpád Tamásy"
  HUN_joseph_august:0 "József Ágost"
  HUN_karoly_huszar:0 "Károly Huszár"
  HUN_istvan_tisza:0 "István Tisza"
+ HUN_samu_hazai:0 "Samu Hazai"
 
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
