reduce yemen resistance

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1811,14 +1811,15 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  political_power_more_than_15:0 "§Y15.00§!"
  political_power_more_than_15_blocked:0 "§R15.00§!"
  political_power_more_than_15_tooltip:0 "It costs £GFX_pol_power §Y15§! to take the decision"
- command_power_more_than_25:0 "£command_power §Y25§!"
- command_power_more_than_25_blocked:0 "£command_power §R25§!"
- command_power_more_than_25_tooltip:0 "It costs £command_power §Y25§! to take the decision"
+ command_power_more_than_10:0 "£command_power §Y10§!"
+ command_power_more_than_10_blocked:0 "£command_power §R10§!"
+ command_power_more_than_10_tooltip:0 "It costs £command_power §Y10§! to take the decision"
  command_power_more_than_15:0 "£command_power §Y15§!"
  command_power_more_than_15_blocked:0 "£command_power §R15§!"
  command_power_more_than_15_tooltip:0 "It costs £command_power §Y15§! to take the decision"
- command_power_more_than_10:0 "£command_power §Y10§!"
- command_power_more_than_10_blocked:0 "£command_power §R10§!"
+ command_power_more_than_25:0 "£command_power §Y25§!"
+ command_power_more_than_25_blocked:0 "£command_power §R25§!"
+ command_power_more_than_25_tooltip:0 "It costs £command_power §Y25§! to take the decision"
  war_support_more_than_5:0 "£war_support §Y5§!"
  war_support_more_than_5_blocked:0 "£war_support §R5§!"
  war_support_more_than_5_tooltip:0 "It costs £war_support §Y5§! to take the decision"
@@ -2830,8 +2831,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
  TUR_foreign_debt_payment_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
- TUR_foreign_debt_payment_2:0 "[FROM.GetAdjective] Debt Payment"
- TUR_foreign_debt_payment_2_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
  has_active_debt_payment:0 "Is currently paying §YForeign Debt§!"
  TUR_privatize_factories:0 "Privatize Civilian Factories"
  TUR_sell_mosul_oil:0 "Oil Concessions over Mosul"
@@ -5549,6 +5548,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_appoint_local_inspectors:0 "Appoint Local Inspectors in [FROM.GetName]"
  TUR_appoint_local_inspectors_desc:0 "Our Arabs lands have been left unsupervised for quite a long time. Arab gangs and tribal leaders are roaming the desert and rural areas that state control cannot reach. By appointing local inspectors, we will extend state control."
  TUR_appoint_local_inspectors_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+5%§!\n\n"
+ TUR_combat_arab_rebels:0 "Combat Arab Rebels in [FROM.GetName]"
+ TUR_combat_arab_rebels_desc:0 "Arab rebels, whether tribal, religious or nationalistic, have been operating in [FROM.GetName]. As these rebellions have been causing us trouble with control over the province, its time for us to conduct extensive operations in the region."
+ TUR_combat_arab_rebels_tt1:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+30.0%§!\n"
+ TUR_combat_arab_rebels_tt2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n£political_violence_texticon  Resistance Target: §G-5%§!\n"
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
@@ -5802,16 +5805,16 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_resistance_growth_1:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+1%§!\n"
 
  TUR_minority_resistance_target_down:0 "[TUR_minority_resistance_target_down]"
- TUR_minority_resistance_target_normal:0 "£political_violence_texticon  Resistance Target: §G+10%§!\n"
- TUR_minority_resistance_target_9:0 "£political_violence_texticon  Resistance Target: §G+9%§!\n"
- TUR_minority_resistance_target_8:0 "£political_violence_texticon  Resistance Target: §G+8%§!\n"
- TUR_minority_resistance_target_7:0 "£political_violence_texticon  Resistance Target: §G+7%§!\n"
- TUR_minority_resistance_target_6:0 "£political_violence_texticon  Resistance Target: §G+6%§!\n"
- TUR_minority_resistance_target_5:0 "£political_violence_texticon  Resistance Target: §G+5%§!\n"
- TUR_minority_resistance_target_4:0 "£political_violence_texticon  Resistance Target: §G+4%§!\n"
- TUR_minority_resistance_target_3:0 "£political_violence_texticon  Resistance Target: §G+3%§!\n"
- TUR_minority_resistance_target_2:0 "£political_violence_texticon  Resistance Target: §G+2%§!\n"
- TUR_minority_resistance_target_1:0 "£political_violence_texticon  Resistance Target: §G+1%§!\n"
+ TUR_minority_resistance_target_normal:0 "£political_violence_texticon  Resistance Target: §G-10%§!\n"
+ TUR_minority_resistance_target_9:0 "£political_violence_texticon  Resistance Target: §G-9%§!\n"
+ TUR_minority_resistance_target_8:0 "£political_violence_texticon  Resistance Target: §G-8%§!\n"
+ TUR_minority_resistance_target_7:0 "£political_violence_texticon  Resistance Target: §G-7%§!\n"
+ TUR_minority_resistance_target_6:0 "£political_violence_texticon  Resistance Target: §G-6%§!\n"
+ TUR_minority_resistance_target_5:0 "£political_violence_texticon  Resistance Target: §G-5%§!\n"
+ TUR_minority_resistance_target_4:0 "£political_violence_texticon  Resistance Target: §G-4%§!\n"
+ TUR_minority_resistance_target_3:0 "£political_violence_texticon  Resistance Target: §G-3%§!\n"
+ TUR_minority_resistance_target_2:0 "£political_violence_texticon  Resistance Target: §G-2%§!\n"
+ TUR_minority_resistance_target_1:0 "£political_violence_texticon  Resistance Target: §G-1%§!\n"
 
  TUR_minority_attrition_down:0 "[TUR_minority_attrition_down]"
  TUR_minority_attrition_normal:0 "£attrition_texticon  Division Attrition: §G-5.0%§!\n"
