Kwantung Leased Territory

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1946,3 +1946,7 @@
 
  XSM_QIN:0 "Qinghai"
  XSM_QIN_DEF:0 "the Qinghai Province"
+ 
+ SMC:0 "Mantetsu"
+ SMC_DEF:0 "the South Manchuria Railway"
+ SMC_ADJ:0 "Manchurian"
