--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3246,10 +3246,10 @@
  AFA_communism_DEF:0 "the Revolutionary Democratic Union of Afar"
  AFA_neutrality:0 "Aussa"
  AFA_neutrality_DEF:1 "the Sultanate of Aussa"
- 
- SMC:0 "Mantetsu"
- SMC_DEF:0 "the South Manchuria Railway"
- SMC_ADJ:0 "Manchurian"
+
+ KWT:0 "Kwantung"
+ KWT_DEF:0 "the Kwantung Leased Territory"
+ KWT_ADJ:0 "Japanese"
  
  ### Debug Tag ###
  XXA:0 "Debug Tag"
