--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -91,3 +91,4 @@
  kumul_modifier:0 "Kumul Khanate"
  kumul_abolished:0 "Kumul Khanate has been abolished"
  concessions_modifier:0 "Concessions In China"
+ concessions_neutral_zone_modifier:0 "Concessions In China Neutral Zone"
