--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3629,7 +3629,7 @@
  SER_expand_the_royal_academy_of_science:0 "Expand the Royal Academy"
  SER_law_modernizations:0 "Law Modernizations"
  SER_investigate_Pasic_family:0 "Investigate the Radicals"
- SER_investigate_Pasic_family:0 "While the Radicals have played an important role in Serbia's development, the loyalties of the party to the King are somewhat unclear. The Independent Radical party, which split from the Radicals, is known for its republican sympathies, and may have supporters in the main Radical faction. It would also be useful to have something on Pasic should he turn against the King."
+ SER_investigate_Pasic_family_desc:0 "While the Radicals have played an important role in Serbia's development, the loyalties of the party to the King are somewhat unclear. The Independent Radical party, which split from the Radicals, is known for its republican sympathies, and may have supporters in the main Radical faction. It would also be useful to have something on Pasic should he turn against the King."
  SER_government_of_national_unity:0 "Government of National Unity"
  SER_revise_the_constitution:0 "Revise the 1903 Constitution"
  SER_convention_with_montenegro:0 "Convention with Montenegro"
@@ -3676,7 +3676,7 @@
  SER_army_debate:0 "The Paramilitary Question"
  SER_army_debate_desc:0 "Secret societies and paramilitary groups exist not only in the military but within every branch of government. The question of what should be done with them remains unclear.
  SER_army_modernization:0 "Army Modernization"
- SER_army_modernization:0 "The Serbian Army, while expeienced and well equipped, is in need of seriours reorganisation if it hopes to function in the modern era."
+ SER_army_modernization_desc:0 "The Serbian Army, while expeienced and well equipped, is in need of seriours reorganisation if it hopes to function in the modern era."
  SER_artillery_grants:0 "Subsidize the Artillery"
  SER_artillery_grants_desc:0 "The Army has requested they be equipped with the latest artillery. Procurment from where does not matter, but hefty subsidies to domestic arms companies will be required."
  SER_foreign_canons:0 "Foreign Equipment"
@@ -3740,7 +3740,7 @@
  SER_attache_to_montenegro:0 "Attaché to Montenegro"
  SER_attache_to_montenegro_desc:0 "The brave Montenegrins have 
  SER_army_promotions:0 "Army Promotions"
- SER_army_promotions:0 "With an aging high command, new blood is needed in the officer corps. Therefore promising officers shall be appointed."
+ SER_army_promotions_desc:0 "With an aging high command, new blood is needed in the officer corps. Therefore promising officers shall be appointed."
  SER_oslobodjenje:0 "Oslobođenje"
  SER_integrate_vojvodina:0 "Integrate Vojvodina"
  SER_suspend_the_constitution:0 "Suspend the Constitution"
