--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -468,8 +468,8 @@
  judicial_reformer:0 "Judicial Reformer"
  black_baron:0 "Black Baron"
  master_organizer:0 "Master Organizer"
- staunch_traditionalist:0 "Staunch Traditionalist"
  divided_coalition_leader:0 "Divided Coalition Leader"
  steadfast_commander:0 "Steadfast Commander"
  supreme_ruler:0 "Supreme Ruler"
  ruthless_commander:0 "Ruthless Commander"
+ rus_anti_communist_crusader:0 "$anti_communist_crusader$"
